--- a/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
+++ b/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
@@ -22,7 +22,14 @@
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.PatientName</label>
                 <div class="col-md-4">
                     @Html.HiddenFor(x => x.Id)
-                    @Html.DropDownListFor(p => p.PatientID, (IEnumerable<SelectListItem>)ViewBag.PatientList, new { @class = "form-control", @id = "ddlpatientlist" })
+                    @if (((int)ViewBag.ActionType) == 0)
+                    {
+                        @Html.DropDownListFor(p => p.PatientID, (IEnumerable<SelectListItem>)ViewBag.PatientList, new { @class = "form-control", @id = "ddlpatientlist" })
+                    }
+                    else
+                    {
+                        @Html.TextBoxFor(x => x.PatientName, new { @class = "form-control", @id = "tbPoliFrom", @readonly = "readonly" })
+                    }
                 </div>
             </div>
             <div class="form-group">
