--- a/Klinik.Web/Views/MasterData/CreateOrEditEmployee.cshtml
+++ b/Klinik.Web/Views/MasterData/CreateOrEditEmployee.cshtml
@@ -47,7 +47,7 @@
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Birthdate</label>
                 <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.Birthdate, new { @class = "form-control", @id = "tbBirthDate" })
+                    @Html.TextBoxFor(x => x.Birthdate, "{0:MM/dd/yyyy}", new { @class = "form-control", @id = "tbBirthDate" })
                 </div>
             </div>
             <div class="form-group">
@@ -60,19 +60,109 @@
 
                 </div>
             </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.EmpReffID
+                </label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.ReffEmpID, (IEnumerable<SelectListItem>)ViewBag.EmpActive, new { @class = "form-control", @id = "ddlEmpReff" })
+                   
+
+                </div>
+            </div>
+
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">
                     @Klinik.Resources.UIMessages.Department
                 </label>
                 <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.EmpDept, (IEnumerable<SelectListItem>)ViewBag.Departments, new { @class = "form-control", @id = "ddlDept" })
+                    @Html.TextBoxFor(x => x.Department, new { @class = "form-control", @id = "tbDepartment" })
                 </div>
             </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.BusinessUnit
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.BussinesUnit, new { @class = "form-control", @id = "tbBu" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.Region
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.Region, new { @class = "form-control", @id = "tbRegion" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.EmpJoinDate</label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.StartDate, "{0:MM/dd/yyyy}", new { @class = "form-control", @id = "tbStartDate" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.EmpEndDate</label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.EndDate, "{0:MM/dd/yyyy}", new { @class = "form-control", @id = "tbEndDate" })
+                </div>
+            </div>
+
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.Email</label>
                 <div class="col-md-4">
                     @Html.TextBoxFor(x => x.Email, new { @class = "form-control", @id = "tbEmail" })
                     @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.KTP
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.KTPNumber, new { @class = "form-control", @id = "tbKTP" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.HPNumber
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.HPNumber, new { @class = "form-control", @id = "tbHP" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.EmpStatus
+                </label>
+                <div class="col-md-4">
+                    @Html.DropDownListFor(p => p.EmpStatus, (IEnumerable<SelectListItem>)ViewBag.EmplStatus, new { @class = "form-control", @id = "ddlEmpStatus" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.EmpGrade
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.Grade, new { @class = "form-control", @id = "tbGrade" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label" for="inputDefault">
+                    @Klinik.Resources.UIMessages.LastEmpID
+                </label>
+                <div class="col-md-4">
+                    @Html.TextBoxFor(x => x.LastEmpId, new { @class = "form-control", @id = "tbLastEmpID" })
                 </div>
             </div>
             <br />
@@ -91,8 +181,20 @@
         });
 
         $('#ddlEmpType').select2();
-        $('#ddlDept').select2();
+        $('#ddlEmpStatus').select2();
+        $('#ddlEmpReff').select2();
+
         $('#tbBirthDate').datepicker({
+            changeMonth: true,
+            changeYear: true
+        });
+
+        $('#tbStartDate').datepicker({
+            changeMonth: true,
+            changeYear: true
+        });
+
+        $('#tbEndDate').datepicker({
             changeMonth: true,
             changeYear: true
         });
