--- a/Klinik.Web/Views/MasterData/EmployeeList.cshtml
+++ b/Klinik.Web/Views/MasterData/EmployeeList.cshtml
@@ -29,7 +29,7 @@
                         <th>@Klinik.Resources.UIMessages.Birthdate</th>
                         <th>@Klinik.Resources.UIMessages.Gender</th>
                         <th>@Klinik.Resources.UIMessages.EmploymentType</th>
-                        <th>@Klinik.Resources.UIMessages.Department</th>
+                        <th>@Klinik.Resources.UIMessages.EmpStatus</th>
                         <th>@Klinik.Resources.UIMessages.Email</th>
                         <th></th>
                     </tr>
@@ -114,7 +114,7 @@
                 { "data": "BirthdateStr", "name": "BirthdateStr", "autoWidth": true },
                 { "data": "Gender", "name": "Gender", "autoWidth": true },
                 { "data": "EmpTypeDesc", "name": "EmpTypeDesc", "autoWidth": true },
-                { "data": "Department", "name": "Department", "autoWidth": true },
+                { "data": "EmpStatusDesc", "name": "EmpStatusDesc", "autoWidth": true },
                 { "data": "Email", "name": "Email", "autoWidth": true },
                 {
                     "render": function (data, type, full, meta) { return '<a class="btn btn-info" href="/MasterData/CreateOrEditEmployee?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>"; }
