--- a/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
+++ b/Klinik.Web/Views/Registration/CreateOrEditRegistration.cshtml
@@ -46,7 +46,7 @@
                     @Klinik.Resources.UIMessages.PoliTo
                 </label>
                 <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.PoliToID, (IEnumerable<SelectListItem>)ViewBag.PoliList, new { @class = "form-control", @id = "ddlpolilist" })
+                    @Html.DropDownListFor(p => p.PoliToID, (IEnumerable<SelectListItem>)ViewBag.PoliList, new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
@@ -54,7 +54,7 @@
                     @Klinik.Resources.UIMessages.Doctor
                 </label>
                 <div class="col-md-4">
-                    @Html.DropDownListFor(p => p.Doctor, (IEnumerable<SelectListItem>)ViewBag.DoctorList, new { @class = "form-control", @id = "ddldoctorlist" })
+                    @Html.DropDownListFor(p => p.Doctor, (IEnumerable<SelectListItem>)ViewBag.DoctorList, new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
@@ -96,9 +96,16 @@
              window.location.href = "/Registration/Index";
         });
 
+        $("#PoliToID").change(function () {
+            $.get("/Registration/GetDoctorList", { PoliId: $("#PoliToID").val() }, function (data) {
+                $("#Doctor").empty();
+                $.each(data, function (index, row) {
+                    $("#Doctor").append('<option value="' + row.ID + '">' + row.Name + '</option>');
+                });
+            });
+        });
+
         $('#ddlregistertype').select2();
-        $('#ddlpolilist').select2();
-        $('#ddldoctorlist').select2();
         $('#ddlpatientlist').select2();
 
         toastr.options = {
