--- a/Klinik.Web/Views/PurchaseRequestPusat/PurchaseRequestPusatList.cshtml
+++ b/Klinik.Web/Views/PurchaseRequestPusat/PurchaseRequestPusatList.cshtml
@@ -1,4 +1,4 @@
-﻿@model Klinik.Entities.PurchaseRequest.PurchaseRequestModel
+﻿@model Klinik.Entities.PurchaseRequestPusat.PurchaseRequestPusatModel
 
 @{
     ViewBag.Title = "DeliveryOrderList";
@@ -10,7 +10,7 @@
             <a href="#" class="fa fa-caret-down"></a>
         </div>
         <h5 class="panel-title">
-            @Klinik.Resources.UIMessages.PurchaseOrderList
+            @Klinik.Resources.UIMessages.PurchaseRequestPusatList
             <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
@@ -39,7 +39,7 @@
     $(document).ready(function () {
 
         $('#btnAdd').click(function (e) {
-            window.location.href = "/PurchaseRequest/CreateOrEditPurchaseRequest";
+            window.location.href = "/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat";
         });
 
         $('#tbProduct').dataTable({
@@ -50,7 +50,7 @@
             "orderMulti": false,
             "pageLength": 10,
             "ajax": {
-                "url": "/PurchaseRequest/GetPurchaseRequestData",
+                "url": "/PurchaseRequestPusat/GetPurchaseRequestPusatData",
                 "type": "POST",
                 "datatype": "json"
             },
@@ -110,8 +110,8 @@
                     "render": function (data, type, full, meta)
                     {
                          var type = full['approve'] == null ? 'Approve' : 'Print';
-                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseRequest/PrintPurchaseRequest?id=' + full.Id + '">' + type + '</a>';
-                        return '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
+                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseRequestPusat/PrintPurchaseRequestPusat?id=' + full.Id + '">' + type + '</a>';
+                        return '<a class="btn btn-info btn-xs" href="/PurchaseRequestPusat/CreateOrEditPurchaseRequestPusat?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
                     }
                 }
 
@@ -156,7 +156,7 @@
 
         function DeleteDO(Id) {
         $.ajax({
-            url: '/PurchaseRequest/DeletePurchaseRequest?id=' + Id,
+            url: '/PurchaseRequestPusat/DeletePurchaseRequestPusat?id=' + Id,
             type: 'POST',
             success: function (result) {
                 if (result.Status) {
@@ -174,7 +174,7 @@
 
         function ApproveDO(Id) {
         $.ajax({
-            url: '/PurchaseRequest/ApprovePurchaseRequest?id=' + Id,
+            url: '/PurchaseRequestPusat/ApprovePurchaseRequestPusat?id=' + Id,
             type: 'POST',
             success: function (result) {
                 if (result.Status) {
@@ -192,7 +192,7 @@
 
         function PrintDO(Id) {
         $.ajax({
-            url: '/PurchaseRequest/PrintPurchaseRequest?id=' + Id,
+            url: '/PurchaseRequestPusat/PrintPurchaseRequestPusat?id=' + Id,
             type: 'GET',
             success: function (result) {
                 if (result.Status) {
