--- a/Klinik.Web/Views/Pharmacy/Prescription.cshtml
+++ b/Klinik.Web/Views/Pharmacy/Prescription.cshtml
@@ -1,101 +1,109 @@
-﻿@model IEnumerable<Klinik.Entities.Form.FormExamineMedicineModel>
+﻿@model Klinik.Entities.Pharmacy.PrescriptionModel
 
 @{
 	ViewBag.Title = "Prescription";
 }
 
 <section class="panel">
-	<header class="panel-heading">
-		<div class="panel-actions">
-			<a href="#" class="fa fa-caret-down"></a>
-		</div>
-		<h5 class="panel-title">
-			Prescription Validation
-		</h5>
-	</header>
+	<form class="form-horizontal form-bordered" method="post" action="/Pharmacy/Prescription">
+		<header class="panel-heading">
+			<h5 class="panel-title">
+				Prescription Validation
+			</h5>
+		</header>
 
-	<div class="panel-body">
-		<div style="width:100%; margin:0 auto">
-			<table id="tbPrescription" class="table table-striped table-bordered dt-responsive" cellspacing="0">
-				<thead>
-					<tr>
-						<th style="width:20px;">NO</th>
-						<th>@Klinik.Resources.UIMessages.MedicineName</th>
-						<th>@Klinik.Resources.UIMessages.Dose</th>
-						<th style="width:30px;">@Klinik.Resources.UIMessages.Amount</th>
-						<th>@Klinik.Resources.UIMessages.RemarkUse</th>
-						<th>@Klinik.Resources.UIMessages.MedicineName</th>
-						<th>@Klinik.Resources.UIMessages.Amount</th>
-						<th>Note</th>
-						<th>@Klinik.Resources.UIMessages.Process</th>
-					</tr>
-				</thead>
-				<tbody>
-					@{
-						int counter = 1;
-						foreach (var item in Model)
-						{
-							<tr>
-								<td>@(counter++)</td>
-								<td>@item.ProductName</td>
-								<td>@item.Dose</td>
-								<td>@item.Qty</td>
-								<td>@item.RemarkUse</td>
-								<td>
-									<input type="text" id="@("medicineName"+(counter-1))" />
-									<input hidden type="text" id="@("idMedicine"+(counter-1))" />
-									<a class="modal-with-form" data-rowno="@(counter-1)" href="#modalForm">&nbsp;.....</a>
-								</td>
-								<td><input type="text" /></td>
-								<td><input type="text" /></td>
-								<td><button>Confirm</button></td>
-							</tr>
+		<div class="panel-body">
+			<div style="width:100%; margin:0 auto">
+				<table id="tbPrescription" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+					<thead>
+						<tr>
+							<th style="width:20px;">NO</th>
+							<th>@Klinik.Resources.UIMessages.MedicineName</th>
+							<th>@Klinik.Resources.UIMessages.Dose</th>
+							<th style="width:30px;">@Klinik.Resources.UIMessages.Amount</th>
+							<th>@Klinik.Resources.UIMessages.RemarkUse</th>
+							<th>@Klinik.Resources.UIMessages.MedicineName</th>
+							<th>@Klinik.Resources.UIMessages.Amount</th>
+							<th>@Klinik.Resources.UIMessages.Note</th>
+							<th>@Klinik.Resources.UIMessages.Process</th>
+						</tr>
+					</thead>
+					<tbody>
+						@{
+							int counter = 1;
+							foreach (var item in Model.Medicines)
+							{
+								<tr>
+									<td>@(counter++)</td>
+									<td>@item.ProductName</td>
+									<td>@item.Dose</td>
+									<td>@item.Qty</td>
+									<td>@item.RemarkUse</td>
+									<td>
+										<input type="text" id="@("medicineName"+(counter-1))" value="@item.Detail.ProductName" />
+										<input hidden type="text" id="@("idMedicine"+(counter-1))" value="@item.Detail.ProductID" />
+										<a class="modal-with-form" data-rowno="@(counter-1)" href="#modalForm">&nbsp;.....</a>
+									</td>
+									<td><input type="text" id="@("amount"+(counter-1))" value="@item.Detail.Qty" /></td>
+									<td><input type="text" id="@("note"+(counter-1))" value="@item.Detail.Note" /> </td>
+									<td id="@("process"+(counter-1))">@item.Detail.ProcessType</td>
+								</tr>
+							}
 						}
-					}
-				</tbody>
-			</table>
-			<!-- Modal Form -->
-			<div id="modalForm" class="modal-block modal-block-primary mfp-hide">
-				<section class="panel">
-					<header class="panel-heading">
-						<h5 class="panel-title">
-							@Klinik.Resources.UIMessages.ProductList
-						</h5>
-					</header>
-					<div class="panel-body">
-						<div style="width:100%; margin:0 auto">
-							<input type="hidden" id="rowno" name="rowno" />
-							<table id="tableProductList" class="table table-striped table-bordered dt-responsive" cellspacing="0">
-								<thead>
-									<tr>
-										<th>@Klinik.Resources.UIMessages.ID</th>
-										<th>@Klinik.Resources.UIMessages.Code</th>
-										<th>@Klinik.Resources.UIMessages.Name</th>
-										<th>@Klinik.Resources.UIMessages.Price</th>
-										<th>@Klinik.Resources.UIMessages.Category</th>
-										<th>@Klinik.Resources.UIMessages.Unit</th>
-										<th>@Klinik.Resources.UIMessages.Action</th>
-									</tr>
-								</thead>
-							</table>
-						</div>
-					</div>
-					<footer class="panel-footer">
-						<div class="row">
-							<div class="col-md-12 text-right">
-								<button class="btn btn-primary modal-dismiss">Close</button>
+					</tbody>
+				</table>
+				<!-- Modal Form -->
+				<div id="modalForm" class="modal-block modal-block-primary mfp-hide">
+					<section class="panel">
+						<header class="panel-heading">
+							<h5 class="panel-title">
+								@Klinik.Resources.UIMessages.ProductList
+							</h5>
+						</header>
+						<div class="panel-body">
+							<div style="width:100%; margin:0 auto">
+								<input type="hidden" id="rowno" name="rowno" />
+								<table id="tableProductList" class="table table-striped table-bordered dt-responsive" cellspacing="0">
+									<thead>
+										<tr>
+											<th>@Klinik.Resources.UIMessages.ID</th>
+											<th>@Klinik.Resources.UIMessages.Code</th>
+											<th>@Klinik.Resources.UIMessages.Name</th>
+											<th>@Klinik.Resources.UIMessages.Price</th>
+											<th>@Klinik.Resources.UIMessages.Category</th>
+											<th>@Klinik.Resources.UIMessages.Unit</th>
+											<th>@Klinik.Resources.UIMessages.Action</th>
+										</tr>
+									</thead>
+								</table>
 							</div>
 						</div>
-					</footer>
-				</section>
+						<footer class="panel-footer">
+							<div class="row">
+								<div class="col-md-12 text-right">
+									<button class="btn btn-primary modal-dismiss">Close</button>
+								</div>
+							</div>
+						</footer>
+					</section>
+				</div>
 			</div>
 		</div>
-	</div>
+
+		<div class="panel-footer">
+			<button type="submit" class="btn btn-primary">@Klinik.Resources.UIMessages.Save</button>
+			<button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
+		</div>
+	</form>
 </section>
 
 @section Scripts {
 	<script type="text/javascript">
 		$(document).ready(function () {
+			$('#btnreset').click(function (e) {
+				window.location.href = "/Pharmacy/PatientList";
+			});
+
 			$('#tableProductList').dataTable({
 				"autoWidth": false,
 				"processing": true,
@@ -154,12 +162,12 @@
 					{ "data": "RetailPrice", "name": "RetailPrice", "autoWidth": true },
 					{ "data": "ProductCategoryName", "name": "ProductCategoryName", "autoWidth": true },
 					{ "data": "ProductUnitName", "name": "ProductUnitName", "autoWidth": true },
-					{						
+					{
 						"render": function (data, type, full, meta) {
 							var name = full['Name'];
 							var id = full['Id'];
 							return '<button class="btn btn-info modal-dismiss" onclick="OnSelectProduct(\'' + id + '\',\'' + name + '\')" >@Klinik.Resources.UIMessages.Select</button>';
-						}											
+						}
 					}
 				]
 			});
@@ -172,7 +180,7 @@
 		var OnSelectProduct = function (Id, Name) {
 			var rowNum = $('#rowno').val();
 			$('#idMedicine' + rowNum).val(Id);
-			$('#medicineName' + rowNum).val(Name);			
+			$('#medicineName' + rowNum).val(Name);
 		}
 	</script>
 }
