--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -52,7 +52,7 @@
                         <th>Nama Obat</th>
                         <th>Total Pemakaian</th>
                         <th>Sisa Stock</th>
-                        <th>Qty</th>
+                        <th>Qty Request</th>
                         <th>Qty add</th>
                         <th>Reason add</th>
                         <th>Total</th>
@@ -112,7 +112,7 @@
                         <td><input type="checkbox" id="newproduct"/></td>
                         <td><input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="" readonly/></td>
                         <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="qty" id="qty" value="" /></td>
+                        <td><input type="text" class="form-control" placeholder="Qty Request" id="qty" value="" /></td>
                         <td><input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" /></td>
                         <td><input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" /></td>
                         <td><input type="text" class="form-control" placeholder="total" id="total" value="" /></td>
