--- a/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/PurchaseRequestList.cshtml
@@ -1,9 +1,14 @@
 ﻿@model Klinik.Entities.PurchaseRequest.PurchaseRequestModel
-
+@using Klinik.Entities.Account;
 @{
     ViewBag.Title = "DeliveryOrderList";
+    var datauser = (AccountModel)Session["UserLogon"];
+    var xx = datauser.Privileges;
 }
 
+@section Styles{
+    <link href="~/Content/Custom/Custom.css" rel="stylesheet" />
+}
 <section class="panel">
     <header class="panel-heading">
         <div class="panel-actions">
@@ -14,17 +19,21 @@
             <button id="btnAdd" class="btn btn-primary"><i class="fa fa-plus"></i>&nbsp;@Klinik.Resources.UIMessages.AddNew</button>
         </h5>
     </header>
-    <div class="panel-body">
+    @xx;
+    <div class="panel-body scrollTable">
         <div style="width:100%; margin:0 auto">
             <table id="tbProduct" class="table table-striped table-bordered dt-responsive" cellspacing="0">
                 <thead>
                     <tr>
                         <th>@Klinik.Resources.UIMessages.IDPR</th>
                         <th>@Klinik.Resources.UIMessages.PrNumber</th>
+                        <th>Tanggal PR</th>
+                        <th>Nomer Po</th>
                         <th>Tanggal Po</th>
-                        <th>@Klinik.Resources.UIMessages.RequestBy</th>
-                        <th>@Klinik.Resources.UIMessages.ApprovedBY</th>
-                        <th>@Klinik.Resources.UIMessages.Approve</th>
+                        <th>Nomer DO</th>
+                        <th>Tanggal DO</th>
+                        <th>@Klinik.Resources.UIMessages.ClinicName</th>
+                        <th>@Klinik.Resources.UIMessages.Status</th>
                         <th>@Klinik.Resources.UIMessages.CreatedBy</th>
                         <th>@Klinik.Resources.UIMessages.Action</th>
                     </tr>
@@ -54,6 +63,21 @@
                 "type": "POST",
                 "datatype": "json"
             },
+            "fnRowCallback": function( nRow, aData, iDisplayIndex, iDisplayIndexFull ) {
+                if (aData['approve'] == null) {
+                    $('td', nRow).addClass('p-3 mb-2 bg-info text-white');
+                }
+                else if (aData['Validasi'] == null && aData['approve'] != null) {
+                    $('td', nRow).addClass('p-3 mb-2 bg-warning text-dark');
+                }
+                else if (aData['Validasi'] != null && aData['approve'] != null && aData['Recived'] == null) {
+                    $('td', nRow).addClass('p-3 mb-2 bg-light text-dark');
+                }
+                else if (aData['Validasi'] != null && aData['approve'] != null && aData['Recived'] != null) {
+                    $('td', nRow).addClass('p-3 mb-2 bg-success text-white');
+                }
+                console.log(aData);
+                },
 
             "columnDefs":
                 [{
@@ -95,22 +119,56 @@
                     "targets": [7],
                     "searchable": true,
                     "orderable": false
+                },
+                {
+                    "targets": [8],
+                    "searchable": true,
+                    "orderable": false
+                },
+                {
+                    "targets": [9],
+                    "searchable": true,
+                    "orderable": false
+                },
+                {
+                    "targets": [10],
+                    "searchable": true,
+                    "orderable": false
                 }
                 ],
 
             "columns": [
                 { "data": "Id", "Id": "Id", "autoWidth": false },
-                { "data": "prnumber", "prnumber": "prnumber", "autoWidth": true },
+                {
+                    "data": "prnumber", 
+                    "render": function (data, type, full, meta) {
+                        return '<a href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">' + full.prnumber + '</a>';
+                    }
+                },
                 { "data": "createformat", "createformat": "createformat", "autoWidth": true },
-                { "data": "request_by", "request_by": "request_by", "autoWidth": false },
-                { "data": "approve_by", "approve_by": "approve_by", "autoWidth": true },
-                { "data": "approve", "approve": "approve", "autoWidth": true },
+                {
+                    "data": "ponumber",
+                    "render": function (data, type, full, meta) {
+                        return '<a href="/PurchaseOrder/CreateOrEditPurchaseOrder?id=' + full.poid + '">' + full.ponumber + '</a>';
+                    }
+                },
+                { "data": "createpo", "createpo": "createpo", "autoWidth": true },
+                {
+                    "data": "donumber", 
+                    "render": function (data, type, full, meta) {
+                        return '<a href="/DeliveryOrder/CreateOrEditDeliveryOrder?id=' + full.doid + '">' + full.donumber + '</a>';
+                    }
+                },
+                { "data": "createdo", "createdo": "createdo", "autoWidth": true },
+                { "data": "namaklinik", "namaklinik": "namaklinik", "autoWidth": false },
+                { "data": "status", "status": "status", "autoWidth": true },
                 { "data": "CreatedBy", "CreatedBy": "CreatedBy", "autoWidth": true },
                 {
                     "render": function (data, type, full, meta)
                     {
-                         var type = full['approve'] == null ? 'Approve' : 'Print';
-                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseRequest/PrintPurchaseRequest?id=' + full.Id + '">' + type + '</a>';
+                        var valisasi = full['Validasi'] != null ? '' : " | <button class='btn btn-success btn-xs' onclick='Validasi(" + full['Id'] + ")' >Validasi</button>";
+                        var type = full['approve'] == null ? 'Approve' : 'Print';
+                        var button = full['approve'] == null ? "<button class='btn btn-success btn-xs' onclick='" + type + "(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Approve</button>" : '<a class="btn btn-success btn-xs" href="/PurchaseRequest/PrintPurchaseRequest?id=' + full.Id + '">' + type + '</a>' + valisasi;
                         return '<a class="btn btn-info btn-xs" href="/PurchaseRequest/CreateOrEditPurchaseRequest?id=' + full.Id + '">@Klinik.Resources.UIMessages.Edit</a>  ' + " | <button class='btn btn-danger btn-xs' onclick='Delete(" + full['Id'] + ")' >@Klinik.Resources.UIMessages.Delete</button>" + " |" + button
                     }
                 }
@@ -152,6 +210,32 @@
             PrintDO(ID);
         }
         return false;
+        }
+
+        var Validasi = function (ID) {
+            var r = confirm("@Klinik.Resources.UIMessages.ApproveConfirmation" + ID + " ) ?");
+            if (r == true) {
+            ValidasiPR(ID);
+        }
+        return false;
+        }
+
+        function ValidasiPR(Id) {
+        $.ajax({
+            url: '/PurchaseRequest/ValidationPurchaseRequest?id=' + Id,
+            type: 'POST',
+            success: function (result) {
+                if (result.Status) {
+                    toastr.options.closeButton = false;
+                    toastr.options.timeOut = 2000;
+                    location.reload();
+                    toastr.success(result.Message);
+                }
+                else {
+                    toastr.error(result.Message);
+                }
+            }
+        });
         }
 
         function DeleteDO(Id) {
