--- a/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
+++ b/Klinik.Web/Views/PurchaseRequest/CreateOrEditPurchaseRequest.cshtml
@@ -5,6 +5,7 @@
     ViewBag.Title = "CreateOrEditDeliveryRequest";
     var account = (AccountModel)Session["UserLogon"];
     var requestby = Model != null ? Model.request_by : account.UserName;
+    var prnumber = Model != null ? Model.prdate : ViewBag.prnumber;
 }
 @section Styles{
     <link href="~/Content/Login/vendor/select2/select2.min.css" rel="stylesheet" />
@@ -23,7 +24,7 @@
             <div class="form-group">
                 <label class="col-md-2 control-label" for="inputDefault">@Klinik.Resources.UIMessages.NoPr</label>
                 <div class="col-md-4">
-                    @Html.TextBoxFor(x => x.prnumber, new { @class = "form-control", @id = "prnumber" })
+                    @Html.TextBoxFor(x => x.prnumber, new { @class = "form-control", @id = "prnumber", @Value = prnumber })
                 </div>
             </div>
             <div class="form-group">
@@ -71,18 +72,20 @@
                                 <td hidden>@item.Id</td>
                                 <td hidden>@item.ProductId</td>
                                 <td><select disabled="disabled"><option>@item.namabarang</option></select></td>
-                                <td><input type="text" class="form-control" value="@item.tot_pemakaian" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.sisa_stok" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty" disabled="disabled" /></td>
+                                <td>@item.tot_pemakaian</td>
+                                <td>@item.sisa_stok</td>
+                                <td>@item.qty</td>
                                 <td><input type="text" class="form-control" value="@item.qty_add" disabled="disabled" /></td>
                                 <td><input type="text" class="form-control" value="@item.reason_add" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.total" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.nama_by_ho" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.qty_by_ho" disabled="disabled" /></td>
-                                <td><input type="text" class="form-control" value="@item.remark_by_ho" disabled="disabled" /></td>
+                                <td>@item.total</td>
+                                <td>@item.nama_by_ho</td>
+                                <td>@item.qty_by_ho</td>
+                                <td>@item.remark_by_ho</td>
                                 <td>
-                                    <button class="edit-purchaseorderdetail btn btn-success btn-sm">Edit</button>
-                                    <button class="btn btn-danger btn-sm">Delete</button>
+                                    <button class="save-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail" style="display:none;">Save</button>
+                                    <button class="edit-purchaseorderdetail btn btn-success btn-sm" data-url="/PurchaseRequest/EditPurchaseRequestDetail">Edit</button>
+                                    <button class="delete-purchaseorderdetail btn btn-danger btn-sm" disabled>Delete</button>
+                                    <img src="~/Content/images/loading.gif" style="height: 30px;display:none;" class="image-loading" />
                                 </td>
                             </tr>
                         }
@@ -95,7 +98,7 @@
                         <th>New Product</th>
                         <th>Total Pemakaian</th>
                         <th>Sisa Stock</th>
-                        <th>Qty</th>
+                        <th>Qty Request</th>
                         <th>Qty add</th>
                         <th>Reason add</th>
                         <th>Total</th>
@@ -110,15 +113,15 @@
                         <td hidden><input type="text" hidden id="ProductId" /></td>
                         <td><select id="namabarang" class="form-control" style="display:block"></select><input type="text" id="newproductname" class="form-control" style="display:none" placeholder="New Product"/></td>
                         <td><input type="checkbox" id="newproduct"/></td>
-                        <td><input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="" readonly/></td>
-                        <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="Qty Request" id="qty" value="" /></td>
+                        <td><input type="text" class="form-control" placeholder="tot_pemakaian" id="tot_pemakaian" value="0" readonly/></td>
+                        <td><input type="text" class="form-control" placeholder="sisa_stok" id="sisa_stok" value="0" readonly/></td>
+                        <td><input type="text" class="form-control" placeholder="Qty Request" id="qty" value="0" readonly/></td>
                         <td><input type="text" class="form-control" placeholder="qty_add" id="qty_add" value="" /></td>
                         <td><input type="text" class="form-control" placeholder="reason_add" id="reason_add" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="total" id="total" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" /></td>
-                        <td><input type="text" class="form-control" placeholder="remark_by_ho" id="remark_by_ho" value="" /></td>
+                        <td><input type="text" class="form-control" placeholder="total" id="total" value="" readonly/></td>
+                        <td><input type="text" class="form-control" placeholder="nama_by_ho" id="nama_by_ho" value="" readonly/></td>
+                        <td><input type="text" class="form-control" placeholder="qty_by_ho" id="qty_by_ho" value="" readonly/></td>
+                        <td><input type="text" class="form-control" placeholder="remark_by_ho" id="remark_by_ho" value="" readonly/></td>
                         <td><input type="button" id="btnAdd" class="btn btn-success float-right" value="Add" /></td>
                     </tr>
                 </tfoot>
@@ -175,7 +178,7 @@
             </footer>
         </form>*@
         <footer class="panel-footer">
-            <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseRequest/CreateOrEditPurchaseRequest">@Klinik.Resources.UIMessages.Save</button>
+            <button type="submit" class="btn btn-primary savepurchasedetail" data-parameterone="_deliveryorderpusat" data-parametertwo="deliveryOrderDetailpusatModels" data-url="/PurchaseRequest/CreateOrEditPurchaseRequest" data-redirect="/PurchaseRequest/PurchaseRequestList">@Klinik.Resources.UIMessages.Save</button>
             <button type="reset" id="btnreset" class="btn btn-default">@Klinik.Resources.UIMessages.Back</button>
         </footer>
     </div>
